syntax = "proto3";

package auth.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/mohamedfawas/qubool-kallyanam/api/proto/auth/v1;authpb";

service AuthService {
  // Register initiates user registration by sending OTP
  rpc Register(RegisterRequest) returns (RegisterResponse);
  
  // Verify confirms user registration with OTP
  rpc Verify(VerifyRequest) returns (VerifyResponse);

  // Login authenticates a user and returns JWT tokens
  rpc Login(LoginRequest) returns (LoginResponse);

  // Logout invalidates user tokens
  rpc Logout(LogoutRequest) returns (LogoutResponse);

  // RefreshToken generates a new access token using a refresh token
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  
  // AdminLogin authenticates an admin user and returns JWT tokens
  rpc AdminLogin(LoginRequest) returns (LoginResponse);
  
  // Delete soft deletes a user account
  rpc Delete(DeleteRequest) returns (DeleteResponse);

  // Admin methods for user management
  rpc GetUsersList(GetUsersListRequest) returns (GetUsersListResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

message RegisterRequest {
  string email = 1;
  string phone = 2;
  string password = 3;
}

message RegisterResponse {
  bool success = 1;
  string message = 2;
  string error = 3;
}

message VerifyRequest {
  string email = 1;
  string otp = 2;
}

message VerifyResponse {
  bool success = 1;
  string message = 2;
  string error = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string access_token = 2;
  string refresh_token = 3;
  int32 expires_in = 4;
  string message = 5;
  string error = 6;
}

message LogoutRequest {
  string access_token = 1;
}

message LogoutResponse {
  bool success = 1;
  string message = 2;
  string error = 3;
}

message RefreshTokenRequest {
  // Empty for now as token will be in metadata
}

message RefreshTokenResponse {
  bool success = 1;
  string access_token = 2;
  string refresh_token = 3;
  int32 expires_in = 4;
  string message = 5;
  string error = 6;
}

message DeleteRequest {
  string password = 1;
}

message DeleteResponse {
  bool success = 1;
  string message = 2;
  string error = 3;
}


// Admin: Get users list request
message GetUsersListRequest {
  int32 limit = 1;
  int32 offset = 2;
  string sort_by = 3;                 // "created_at", "last_login_at", "email"
  string sort_order = 4;              // "asc", "desc"
  
  // Boolean filters (optional)
  optional bool is_active = 5;        // Filter by active status: true/false
  optional bool verified_only = 6;    // Filter verified users: true/false
  optional bool premium_only = 7;     // Filter premium users: true/false
  
  // Date filters (optional)
  google.protobuf.Timestamp created_after = 8;
  google.protobuf.Timestamp created_before = 9;
  google.protobuf.Timestamp last_login_after = 10;
  google.protobuf.Timestamp last_login_before = 11;
}

// Admin: Get users list response
message GetUsersListResponse {
  bool success = 1;
  string message = 2;
  repeated UserData users = 3;
  PaginationData pagination = 4;
}

// Admin: Get single user request (by UUID, email, or phone)
message GetUserRequest {
  string identifier = 1;              // Can be UUID, email, or phone number
  string identifier_type = 2;         // "uuid", "email", or "phone" (optional - auto-detect if not provided)
}

// Admin: Get single user response
message GetUserResponse {
  bool success = 1;
  string message = 2;
  UserData user = 3;
}

// User data structure
message UserData {
  string id = 1;
  string email = 2;
  string phone = 3;
  bool verified = 4;
  bool is_active = 5;
  bool is_premium = 6;
  google.protobuf.Timestamp premium_until = 7;
  google.protobuf.Timestamp last_login_at = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

// Pagination data structure
message PaginationData {
  int32 total = 1;
  int32 limit = 2;
  int32 offset = 3;
  bool has_more = 4;
  int32 total_pages = 5;
  int32 current_page = 6;
}
